test/cases/compile_errors/return_undefined_from_noreturn.zig
export fn entry() noreturn {
    return undefined;
}

// error
//
// :2:12: error: function declared 'noreturn' returns
// :1:19: note: 'noreturn' declared here
